<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">StorageFileTest</string>
    <string name="trans">档案传输</string>
    <string name="speed">读写速度</string>
    <string name="stress">Stress</string>
    <string name="from_to">→</string>
    <string name="btn_start_test">开始测试</string>
    <string name="message_source_file_not_found">源文件或文件夹无法找到！</string>
    <string name="title_choose_file">请选择需要传输的文件</string>
    <string name="message_choose_file_error">没有选择需要传输的文件！</string>
    <string name="title_trans_count">请输入需要传输文件的次数</string>
    <string name="dialog_next">下一步</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancle">取消</string>
    <plurals name="show_test_countdown">
        <item quantity="zero">测试已完成！</item>
        <item quantity="one">正在进行第<xliff:g id="step_count">%1$d</xliff:g>次测试(…, &#8230;)</item>
        <item quantity="other">正在进行第<xliff:g id="step_count">%1$d</xliff:g>次测试(…, &#8230;)</item>
    </plurals>
    <string name="result_true">成功</string>
    <string name="result_false">失败</string>
    <string name="result_index">序列</string>
    <string name="result_filename">文件名</string>
    <string name="result_filesize">文件大小</string>
    <string name="result_time">用时</string>
    <string name="result_speed">传输速度</string>
    <string name="result_testresult">测试结果</string>
</resources>